syntax = "proto3";

package subscription;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option go_package = ".";


// The user message type
message Subscription {
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;
  google.protobuf.Timestamp deletedAt = 4;
  string userId = 5;
  google.protobuf.Timestamp expiresAt = 6;
}

message SubscriptionCreateRequest {
  string userId = 1;
  google.protobuf.Timestamp expiresAt = 2;
}

message SubscriptionList {
  repeated Subscription subscriptions = 1;
}


// The Subscription service definition
service SubscriptionService {
  // Gets subscriptions
  rpc GetSubscriptions(google.protobuf.Empty) returns (SubscriptionList) {}

  rpc CreateSubscription(SubscriptionCreateRequest) returns (Subscription) {}
}